--- a/FlowerSellerTgBot.csproj
+++ b/FlowerSellerTgBot.csproj
@@ -10,10 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" /> 
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
 		<PackageReference Include="Telegram.Bot" Version="21.3.0" />
 	</ItemGroup>
 
