--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,6 @@ FodyWeavers.xsd
 /Dockerfile
 /.env
 /tocken.txt
+/FlowerSellerTgBot - Backup (1).csproj
+/FlowerSellerTgBot - Backup (2).csproj
+/FlowerSellerTgBot - Backup.csproj
