--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "Telegram": {
     "Token": "BOT_TOKEN"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerConn": "Server=95.163.221.233;Database=simbir_practice_db;Port=5432;User Id=simbir_practice_user;Password=simbirpass;"
+  }
 }
